--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -1006,6 +1006,14 @@ video {
   width: 1px;
 }
 
+.w-16 {
+  width: 4rem;
+}
+
+.w-28 {
+  width: 7rem;
+}
+
 .min-w-\[230px\] {
   min-width: 230px;
 }
@@ -1073,6 +1081,26 @@ video {
 .border-spacing-y-1 {
   --tw-border-spacing-y: 0.25rem;
   border-spacing: var(--tw-border-spacing-x) var(--tw-border-spacing-y);
+}
+
+.-translate-x-full {
+  --tw-translate-x: -100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-x-0 {
+  --tw-translate-x: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-x-2 {
+  --tw-translate-x: 0.5rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-x-10 {
+  --tw-translate-x: 2.5rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .grid-cols-1 {
@@ -1154,6 +1182,10 @@ video {
 
 .self-stretch {
   align-self: stretch;
+}
+
+.overflow-hidden {
+  overflow: hidden;
 }
 
 .overflow-y-auto {
@@ -1266,6 +1298,10 @@ video {
   border-left-width: 2px;
 }
 
+.border-b {
+  border-bottom-width: 1px;
+}
+
 .border-solid {
   border-style: solid;
 }
@@ -1327,6 +1363,21 @@ video {
 .border-\[\#c2c2c2\] {
   --tw-border-opacity: 1;
   border-color: rgb(194 194 194 / var(--tw-border-opacity));
+}
+
+.border-b-\[\#c2c2c2\] {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(194 194 194 / var(--tw-border-opacity));
+}
+
+.border-b-\[\#f5f5f6\] {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(245 245 246 / var(--tw-border-opacity));
+}
+
+.border-b-zinc-400 {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(161 161 170 / var(--tw-border-opacity));
 }
 
 .border-opacity-10 {
@@ -1419,6 +1470,10 @@ video {
   background-color: rgb(237 237 237 / var(--tw-bg-opacity));
 }
 
+.bg-white\/5 {
+  background-color: rgb(255 255 255 / 0.05);
+}
+
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
 }
@@ -1457,6 +1512,10 @@ video {
 
 .p-1\.5 {
   padding: 0.375rem;
+}
+
+.p-5 {
+  padding: 1.25rem;
 }
 
 .px-0\.5 {
@@ -1544,6 +1603,11 @@ video {
   padding-bottom: 1rem;
 }
 
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
 .pr-2 {
   padding-right: 0.5rem;
 }
@@ -1594,6 +1658,10 @@ video {
 
 .pt-7 {
   padding-top: 1.75rem;
+}
+
+.pl-10 {
+  padding-left: 2.5rem;
 }
 
 .text-center {
